--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,4 +2,4 @@
   <a routerLink="/admin/settings" routerLinkActive="active">Settings</a>
   <a routerLink="/admin/email" routerLinkActive="active">Email</a>
 </nav>
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate($event)" (deactivate)="onDeactivate($event)"></router-outlet>
